--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,14 @@
         transform: translate(24px, 0);
     }
 }
+
+
+
+
+.sidebar {
+    min-height: 100vh;
+    width: 200px;
+    background-color: #ffffff;
+}
+
+
