feat: add sidebar collapse

--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,10 @@
 
 
 
-.sidebar {
-    min-height: 100vh;
-    width: 200px;
-    background-color: #ffffff;
-}
+/* .sidebar { */
+/*     min-height: 100vh; */
+/*     width: 200px; */
+/*     background-color: #ffffff; */
+/* } */
 
 
